test/libsolidity/syntaxTests/nameAndTypeResolution/588_interface_function_modifier.sol
interface I {
  function f() external m pure returns (uint);
  modifier m() { _; }
}
// ----
// SyntaxError: (16-60): Functions in interfaces cannot have modifiers.
